--- a/.github/workflows/run_tests.yaml
+++ b/.github/workflows/run_tests.yaml
@@ -8,21 +8,32 @@ on:
       - '**.yaml'
     branches:
       - main
+concurrency:
+  group: staging_environment
+  cancel-in-progress: true
 
 jobs:
   setup-and-test-app:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+        - name: Checkout repository
+          uses: actions/checkout@v4
+        - name: Install Docker Compose
+          run: |
+            sudo curl -L "https://github.com/docker/compose/releases/download/1.29.2/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+            sudo chmod +x /usr/local/bin/docker-compose
+            docker-compose --version
 
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
+        - name: Start Postgres and Adminer
+          run: docker-compose up -d mongodb
 
-      - name: Restore Dependencies for web-api
-        run: npm ci
+        - name: Use Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: 20
 
-      - name: Run Tests for app/web-api
-        run: npm test
+        - name: Restore Dependencies for web-api
+          run: npm ci
+
+        - name: Run Tests for app/web-api
+          run: npm test
