--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,21 @@
 version: "3.5"
 
 services:
+  api01-test:
+    hostname: api01
+    build: .
+    environment:
+      DB_HOST: mongodb
+      DB_NAME: customers
+    ports:
+      - "9999:9999"
+    # command: npm run test
+    command: npm run test:dev
+    volumes:
+      - .:/src
+      - nodemodules:/src/node_modules
+    depends_on:
+      - mongodb
 
   mongodb:
     image: mongo
@@ -9,3 +24,6 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: example
+
+volumes:
+  nodemodules: {}
